--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,8 +1,8 @@
-<nav>
-    <ul>
-        <li><a href="/">about</a></li>
-        <li><a href="/blog">blog</a></li>
-        <li><a href="/resume">resume</a></li>
-        <li><a href="#contact">contact</a></li>
+<nav class="nav">
+    <ul class="nav__list">
+        <li class="nav__list__item"><a href="/">about</a></li>
+        <li class="nav__list__item"><a href="/blog">blog</a></li>
+        <li class="nav__list__item"><a href="/resume">resume</a></li>
+        <li class="nav__list__item"><a href="#contact">contact</a></li>
     </ul>
 </nav>
