add layout to resume page; fix footer bug; add recent posts section;

--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -7,4 +7,7 @@
             {% endif %}
         {% endfor %}
     </ul>
+    <div class="footer__identity">
+        verify my identity on <a href="{{ metadata.identity.domain }}{{ metadata.identity.username }}" target="_blank">{{ metadata.identity.name }}</a>
+    </div>
 </footer>
