--- a/blog/index.njk
+++ b/blog/index.njk
@@ -2,4 +2,7 @@
 layout: layouts/main.njk
 ---
 
-<h1> this is the blog </h1>
+<div class="content">
+    <h1>the rustic blog</h1>
+    <p>Welcome to my blog!</p>
+</div>
