--- a/_includes/styles/footer.css
+++ b/_includes/styles/footer.css
@@ -1,5 +1,10 @@
 .footer {
-    
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
 
 .footer__social {
@@ -21,13 +26,38 @@
     font-size: 1.5rem;
 }
 
-.footer__social__item a {
+.footer__social__item a, .footer__identity a {
     color: var(--muted);
     transition: color 0.2s ease-in;
 }
 
-.footer__social__item a:hover {
+.footer__social__item a:hover, .footer__identity a:hover {
     color: var(--secondary-color-2);
 }
 
 .footer__social__item a:visited { }
+
+.footer__identity {
+    color: var(--muted);
+    font-size: 0.75rem;
+}
+
+.footer__social--highlight {
+    border: 3px dotted white;
+    animation: footer__social--highlight-anim 5s ease-in;
+}
+
+@keyframes footer__social--highlight-anim {
+    0% {
+        opacity: 0;
+    }
+    25% {
+        opacity: 1;
+    }
+    75% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
