--- a/_includes/styles/index.css
+++ b/_includes/styles/index.css
@@ -41,6 +41,14 @@ main {
     font-weight: 700;
 }
 
+.muted {
+    color: var(--muted);
+}
+
+.small {
+    font-size: 1rem;
+}
+
 .splash {
     display: flex;
     justify-content: center;
@@ -52,6 +60,7 @@ main {
     font-family: var(--title-font);
     font-size: 3.5rem;
     font-weight: 700;
+    text-shadow: 5px 5px 5px black;
 }
 
 .content {
