--- a/resume/index.njk
+++ b/resume/index.njk
@@ -1,7 +1,239 @@
 ---
 layout: layouts/main.njk
 ---
+<style>
+    .resume section {
+        padding-bottom: 0px;
+    }
+
+    .resume__container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .resume__container__item {
+        margin-bottom: 20px;
+    }
+    
+    .resume__container__item__row {
+        font-size: 1rem;
+    }
+
+    .resume__container__item__row--header {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .resume__container__item__row ul {
+        margin-bottom: 0px;
+    }
+</style>
 
 <div class="content">
-    Elton Pinto
+    <div>
+        <button>Download pdf</button>
+    </div>
+    <div class="resume">
+        <h1>{{ me.name }}</h1>
+
+        <section>
+            <h2>Education</h2>
+            <div class="resume__container">
+                <div class="resume__container__item">
+                    <div class="resume__container__item__row--header">
+                        <span>
+                            <strong>Georgia Institute of Technology</strong>
+                            <span class="small">Atlanta, GA</span>
+                        </span>
+                        <span class="small muted">
+                            August 2018 - May 2022
+                        </span>
+                    </div>
+                    <div class="resume__container__item__row">
+                        <span>B.S Computer Science</span>
+                    </div>
+                    <div class="resume__container__item__row">
+                        <span>GPA 4.0</span>
+                    </div>
+                    <div class="resume__container__item__row">
+                        <ul>
+                            <li>
+                                <strong>Concentrations:</strong>
+                                <span>Computer Systems and Architecture, Theory</span>
+                            </li>
+                            <li>
+                                <strong>Selected Coursework:</strong>
+                                <span>Data Structures & Algorithms, Advanced Algorithms, Computer Systems and Networks, Operating Systems, Computer Vision, Intro to AI</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h2>Experience</h2>
+            <div class="resume__container">
+                <div class="resume__container__item">
+                    <div class="resume__container__item__row--header">
+                        <span>
+                            <strong>Software Engineering Intern, NCR</strong>
+                            <span class="small">
+                                Atlanta, GA
+                            </span>
+                        </span>
+                        <span class="small muted">
+                            May 2019 - Aug 2019
+                        </span>
+                    </div>
+                    <div class="resume__container__item__row">
+                        <ul>
+                            <li>
+                                Enhanced the Emerald POS test suite with 7 automated test scripts written in C# using Selenium
+                            </li>
+                            <li>
+                                Reduced the running time of the test suite by 75% by optimizing the existing codebase  
+                            </li>
+                            <li>
+                                Worked with a global team to certify the Emerald POS product release for Northgate                            
+                            </li>
+                            <li>
+                                Installed and configured 3 VMs on servers located in Waterloo to enhance team productivity
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="resume__container__item">
+                     <div class="resume__container__item__row--header">
+                        <span>
+                            <strong>Undergraduate Teaching Assistant</strong>
+                            <span class="small">
+                                Georgia Institute of Technology 
+                            </span>
+                        </span>
+                        <span class="small muted">
+                            Aug 2019 - Present
+                        </span>
+                    </div>
+                    <div class="resume__container__item__row">
+                        <span>
+                            Courses
+                            <i>CS 2110 (Computer Organization and Architecture Current), CS 1301: Intro to Computing</i>
+                        </span>
+                    </div>
+                    <div class="resume__container__item__row">
+                        <ul>
+                            <li>Hold office hours to help students debug assembly code and challenging projects written in C</li>
+                            <li>Conduct a weekly recitation for 50 students; proctor midterms, timed labs, and quizzes</li>
+                            <li>Author and grade homework assignments, quizzes, and exams</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h2>Projects</h2>
+            <div class="resume__container">
+                <div class="resume__container__item">
+                    <div class="resume__container__item__row">
+                        <ul>
+                            <li>
+                                <strong><a href="https://github.com/1ntEgr8/hn">hn</a></strong>
+                                <p>
+                                    Developed a HackerNews CLI in Rust. Displays the top 30 stories by manipulating the terminal tty in raw mode, supports save-for-later, and uses vim-style navigation to view stories. Available on homebrew.
+                                </p>
+                            </li>
+                            <li>
+                                <strong><a href="https://github.com/1ntEgr8/emojic">emojic</a></strong>
+                                <p>
+                                    Created a tool that generates an emojified FFT visualization of an mp3 song on a browser. The tool transforms the lyrics into emoji, and then render 256 dancing emojis with little-to-no lag.
+                                </p>
+                            </li>
+                            <li>
+                                <strong><a href="https://github.com/HackGT/mapGTEditor">mapGT</a></strong>
+                                <p>
+                                    Built a fully-featured JavaScript SVG editor that allows HackGT members to create interactive maps on the fly. Authored a supporting library that provides developers with an API to create interactive experiences using the exported map. Engineered the editor to be a PWA.
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h2>Extracurriculars</h2>
+            <div class="resume__container">
+                <div class="resume__container__item">
+                    <div class="resume__container__item__row--header">
+                        <span>
+                            <strong>HackGT</strong>
+                            <span class="small">
+                                Software Developer
+                            </span>
+                        </span>
+                        <span class="small muted">
+                            Dec 2018 - Present
+                        </span>
+                    </div>
+                    <div class="resume__container__item__row">
+                        <ul>
+                            <li>
+                                Helped organize HackGT (a 1000+ participant hackathon), BuildGT, and Horizons
+                            </li>
+                            <li>
+                                Mentored Atlanta high school students at Catalyst, a 200+ participant learnathon
+                            </li>
+                            <li>
+                                Created mapGT; Programmed a calibration system for HackGT’s hackathon application review SlackBot that reduced application review time from weeks to 3-4 days.
+                            </li>
+                            <li>
+                                Leading a team of 20 people and coordinating efforts across research labs and student orgs to host Horizons
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="resume__container__item">
+                    <div class="resume__container__item__row--header">
+                        <span>
+                            <strong>Bits of Good</strong>
+                        </span>
+                        <span class="small muted">
+                            Aug 2019 - Dec 2019 
+                        </span>
+                    </div>
+                    <div class="resume__container__item__row">
+                        <ul>
+                            <li>
+                                Developed a search engine that helps Medshare’s 20,000 volunteers in inventory management by replacing the old paper-based system.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h2>Skills</h2>
+            <div class="resume__container__item">
+                <div class="resume__container__item__row">
+                    <ul>
+                        <li>
+                            <strong>Languages:</strong>
+                            Rust, JavaScript, TypeScript, C, Java, C#, Python, Elm, Go, Haskell, bash
+                        </li>
+                        <li>
+                            <strong>Technologies:</strong>
+                            git, vim, React, Node.js, Express, WebSockets, Flask, Google Cloud, Docker, Kubernetes, FP, OOP
+                        </li>
+                        <li>
+                            <strong>Interests:</strong>
+                            Compilers, Web Development, Speed-cubing, Origami, Music, emoji
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </div>
 </div>
