--- a/resume/index.njk
+++ b/resume/index.njk
@@ -1,6 +1,7 @@
 ---
 layout: layouts/main.njk
 ---
+
 <style>
     .resume h2 {
         color: var(--secondary-color-1);
@@ -44,7 +45,9 @@ layout: layouts/main.njk
         <div class="resume__header">
             <h1>{{ me.name }}</h1>
             <div>
-                <a href="https://drive.google.com/file/d/1cte4ENgb7_0ju5kWoH4qDYiKk8nW9BRB/view?usp=sharing" target="_blank"><button>view as pdf</button></a>
+                <a href="https://drive.google.com/file/d/1cte4ENgb7_0ju5kWoH4qDYiKk8nW9BRB/view?usp=sharing" target="_blank">
+                    <button>view as pdf</button>
+                </a>
             </div>
         </div>
 
