add gitignore and remove _site

--- a/blog/index.njk
+++ b/blog/index.njk
@@ -3,6 +3,6 @@ layout: layouts/main.njk
 ---
 
 <div class="content">
-    <h1>the rustic blog</h1>
+    <h1>lexically :: scoped</h1>
     <p>Welcome to my blog!</p>
 </div>
