add metadata previews

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,7 +1,22 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>lexically::scoped | Elton Pinto</title>
+        <meta name="title" content="lexically::scoped | Elton Pinto">
+        <meta name="description" content="My personal website and blog!">
+        
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://eltonpinto.me/">
+        <meta property="og:title" content="lexically::scoped | Elton Pinto">
+        <meta property="og:description" content="My personal website and blog!">
+        <meta property="og:image" content="assets/preview.png">
+        
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://eltonpinto.me/">
+        <meta property="twitter:title" content="lexically::scoped | Elton Pinto">
+        <meta property="twitter:description" content="My personal website and blog!">
+        <meta property="twitter:image" content="assets/preview.png">
+
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
