--- a/blog/index.njk
+++ b/blog/index.njk
@@ -3,6 +3,8 @@ layout: layouts/main.njk
 ---
 
 <div class="content">
-    <h1>lexically :: scoped</h1>
-    <p>Welcome to my blog!</p>
+    <h1>
+        🎯
+        <span style="color: var(--secondary-color-1); padding-left: 15px;">lexically</span> :: <span style="color: var(--secondary-color-2);">scoped</span>
+    </h1>
 </div>
