add blog templates, and style blog lists

--- a/blog/index.njk
+++ b/blog/index.njk
@@ -3,8 +3,17 @@ layout: layouts/main.njk
 ---
 
 <div class="content">
-    <h1>
-        🎯
-        <span style="color: var(--secondary-color-1); padding-left: 15px;">lexically</span> :: <span style="color: var(--secondary-color-2);">scoped</span>
-    </h1>
+    <h2><span style="padding-right: 10px;">🎯</span> lexically :: scoped</h2>
+    <div>
+        {%- for post in collections.post -%}
+        <div class="post">
+            <a href={{ post.url }}>
+                <article class="post__title">{{ post.data.title }}</article>
+            </a>
+            <time class="post__date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate }}</time>
+            <p>{{ post.data.excerpt }} <a href="{{ post.url }}"> read more </a></p>
+        </div>
+        <hr></hr>
+        {%- endfor -%}
+    </div>
 </div>
