--- a/index.njk
+++ b/index.njk
@@ -39,5 +39,10 @@ work:
 
     <section>
         <h2>{% emoji "📜" %} Recent posts </h2>
+        <ul>
+            {%- for post in collections.post -%}
+                <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
+            {%- endfor -%}
+        </ul>
     </section>
 </div>
