--- a/index.njk
+++ b/index.njk
@@ -40,8 +40,8 @@ work:
     <section>
         <h2>{% emoji "📜" %} Recent posts </h2>
         <ul>
-            {%- for post in collections.post -%}
-                <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
+            {%- for post in collections.post | reverse -%}
+                <li><a href="{{ post.url }}">{{ post.data.title }}</a> <small class="muted">{{ post.data.date | readableDate }}</small></li>
             {%- endfor -%}
         </ul>
     </section>
