--- a/_includes/styles/index.css
+++ b/_includes/styles/index.css
@@ -91,12 +91,11 @@ button {
     font-weight: 700;
     text-decoration: none;
     border-bottom: 2px solid var(--secondary-color-1);
-    opacity: 0.8;
     transition: opacity 0.2s ease-in;
 }
 
 .content a:hover {
-    opacity: 1;
+    filter: brightness(1.1);
     border-bottom: 2.5px solid var(--secondary-color-1);
 }
 
