--- a/_includes/styles/index.css
+++ b/_includes/styles/index.css
@@ -46,6 +46,27 @@ button {
     cursor: pointer;
 }
 
+p code {
+    background: #3c3c3c;
+    padding: 3px;
+    border-radius: 3px;
+}
+
+p {
+    line-height: 2rem;
+}
+
+h1, h2, p {
+    padding: 5px 0px;
+}
+
+blockquote {
+    margin: 0px;
+    padding-left: 20px;
+    color: #b1b1b1;
+    border-left: 5px #b1b1b1 solid;
+}
+
 .download-btn {
     background: var(--success-color);
 }
@@ -116,6 +137,7 @@ button {
 .post__title {
     font-size: 2rem;
     padding-bottom: 10px;
+    color: var(--secondary-color-2);
 }
 
 @media (prefers-color-scheme: dark) {
