--- a/index.njk
+++ b/index.njk
@@ -41,7 +41,7 @@ work:
         <h2>{% emoji "📜" %} Recent posts </h2>
         <ul>
             {%- for post in collections.post | reverse -%}
-                <li><a href="{{ post.url }}">{{ post.data.title }}</a> <small class="muted">{{ post.data.date | readableDate }}</small></li>
+                <li><a href="{{ post.url }}">{{ post.data.title | safe }}</a> <small class="muted">{{ post.data.date | readableDate }}</small></li>
             {%- endfor -%}
         </ul>
     </section>
