--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <title>lexically::scoped | Elton Pinto</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <meta name="title" content="lexically::scoped | Elton Pinto">
         <meta name="description" content="My personal website and blog!">
         
@@ -17,7 +19,7 @@
         <meta property="twitter:description" content="My personal website and blog!">
         <meta property="twitter:image" content="{{ me.website.url }}/assets/preview.png">
 
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>">
+        <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/direct-hit_1f3af.png">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         
