add metadata info per webpage

--- a/index.njk
+++ b/index.njk
@@ -9,6 +9,8 @@ gatech:
 work:
   ncr: https://www.ncr.com
   github: https://www.github.com/
+title: lexically::scoped | Elton Pinto
+description: My personal website and blog!
 ---
 
 <div class="splash">
