--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>lexically::scoped | Elton Pinto</title>
+        <title>{{ title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="title" content="lexically::scoped | Elton Pinto">
-        <meta name="description" content="My personal website and blog!">
+        <meta name="title" content="{{ title or metadata.title }}">
+        <meta name="description" content="{{ description or metadata.description }}">
         
         <meta property="og:type" content="website">
         <meta property="og:url" content="{{ me.website.url }}">
