--- a/index.njk
+++ b/index.njk
@@ -43,8 +43,35 @@ description: My personal website and blog!
         <h2>{% emoji "📜" %} Recent posts </h2>
         <ul>
             {%- for post in collections.post | reverse -%}
-                <li><a href="{{ post.url }}">{{ post.data.title | safe }}</a> <small class="muted">{{ post.data.date | readableDate }}</small></li>
+                <li>
+                    <a href="{{ post.url }}">{{ post.data.title | safe }}</a> 
+                    <small class="muted">{{ post.data.date | readableDate }}</small>
+                </li>
             {%- endfor -%}
         </ul>
     </section>
+
+    <section>
+        <h2>{% emoji "📣" %} Talks </h2>
+        <ul>
+            {%- for talk in talks | reverse -%}
+                <li>
+                    {{ talk.name }} <small class="muted">{{ talk.date | toDateObj | readableDate }}</small>
+                    <br>
+                    <small>
+                        {% if talk.slides %}
+                            <a href="{{ talk.slides }}">📈 slides</a>
+                        {% endif %}
+                        {% if talk.slides and talk.video %}
+                            |
+                        {% endif %}
+                        {% if talk.video %}
+                            <a href="{{ talk.video }}">📹 video</a>
+                        {% endif %}
+                    </small>
+                </li>
+            {%- endfor -%}
+        </ul>
+    </section>
+
 </div>
