--- a/index.njk
+++ b/index.njk
@@ -27,7 +27,7 @@ description: My personal website and blog!
         </p>
 
         <p>
-            I currently work with <a href="{{ gatech.hackgt.main }}" target="_blank">HackGT</a> as a tech team member where I help throw one of the biggest collegiate hackathons in the south. I'm also a teaching assistant for CS 2110 (Computer Systems and Architecture).
+            I am currently the co-director of <a href="{{ gatech.hackgt.main }}" target="_blank">HackGT</a>. I'm also a teaching assistant for CS 3210 (Design of Operating Systems).
         </p>
 
         <p>
