--- a/resume/index.njk
+++ b/resume/index.njk
@@ -105,6 +105,23 @@ title: lexically::scoped | resume
                 <div class="resume__container__item">
                     <div class="resume__container__item__row--header">
                         <span>
+                            <strong>Software Engineering Intern, Facebook</strong>
+                            <span class="small">
+                                Menlo Park, CA
+                            </span>
+                        </span>
+                        <span class="small muted">
+                            May 2021 - Aug 2021
+                        </span>
+                    </div>
+                    <div class="resume__container__item__row">
+                        <em>Incoming intern</em>
+                    </div>
+                </div>
+
+                <div class="resume__container__item">
+                    <div class="resume__container__item__row--header">
+                        <span>
                             <strong>Software Engineering Intern, Innovation Lab, NCR</strong>
                             <span class="small">
                                 Atlanta, GA
@@ -177,20 +194,16 @@ title: lexically::scoped | resume
                             </span>
                         </span>
                         <span class="small muted">
-                            Aug 2019 - Present
+                            Jan 2019 - Present
                         </span>
                     </div>
                     <div class="resume__container__item__row">
-                        <span>
-                            Courses
-                            <i>CS 2110 (Computer Organization and Architecture Current), CS 1301: Intro to Computing</i>
-                        </span>
-                    </div>
-                    <div class="resume__container__item__row">
+                        <span> Courses </span>
                         <ul>
-                            <li>Hold office hours to help students debug assembly code and challenging projects written in C</li>
-                            <li>Conduct a weekly recitation for 50 students; proctor midterms, timed labs, and quizzes</li>
-                            <li>Author and grade homework assignments, quizzes, and exams</li>
+                            <li>CS 3210: Design of Operating Systems (Current)</li>
+                            <li>CS 2110: Computer Organization and Architecture</li>
+                            <li>CS 1301: Intro to Computing</li>
+                            <li>PHYS 2211: Intro to Physics</li>
                         </ul>
                     </div>
                 </div>
