--- a/resume/index.njk
+++ b/resume/index.njk
@@ -248,7 +248,7 @@ title: lexically::scoped | resume
                         <span>
                             <strong>HackGT</strong>
                             <span class="small">
-                                Software Developer, Horizons event lead
+                                Co-director (Current), Software Developer, Horizons event lead
                             </span>
                         </span>
                         <span class="small muted">
