--- a/resume/index.njk
+++ b/resume/index.njk
@@ -4,10 +4,6 @@ title: lexically::scoped | resume
 ---
 
 <style>
-    .resume h2 {
-        color: var(--secondary-color-1);
-    }
-
     .resume section {
         padding-bottom: 0px;
     }
@@ -47,7 +43,7 @@ title: lexically::scoped | resume
             <h1>{{ me.name }}</h1>
             <div>
                 <a href="https://drive.google.com/file/d/1nxhDVAbAJxT8Xm-L1jC4rlM4dLpV-UGH/view?usp=sharing" target="_blank">
-                    <button>view as pdf</button>
+                    view as pdf
                 </a>
             </div>
         </div>
@@ -115,7 +111,7 @@ title: lexically::scoped | resume
                         </span>
                     </div>
                     <div class="resume__container__item__row">
-                        <em>Incoming intern</em>
+                        <em>Incoming</em>
                     </div>
                 </div>
 
