--- a/_includes/styles/nav.css
+++ b/_includes/styles/nav.css
@@ -12,13 +12,14 @@
 }
 
 .nav__list__item {
-    padding: 20px;
+    padding: 20px 0px;
+    margin-left: 25px;
 }
 
 .nav__list__item a {
     color: var(--muted);
     font-size: 1.1rem;
-    font-weight: 700;
+    /* font-weight: 700; */
     text-decoration: none;
     transition: color 0.2s ease-in;
 }
