--- a/index.njk
+++ b/index.njk
@@ -19,12 +19,11 @@ description: My personal website and blog!
 <div class="content">
     <section>
         <p>
-            I'm an undergrad studying Computer Science at <a href="{{ gatech.main }}" target="_blank">Georgia Tech</a>. My interests include operating systems, compilers, functional programming, web development, and all things Rust!
+            I'm an undergrad studying Computer Science at <a href="{{ gatech.main }}" target="_blank">Georgia Tech</a>. My interests include operating systems, compilers, quantum computing, functional programming, and web development.
         </p>
 
         <p>
-            I enjoy hacking on <span class="accent">open source projects {% emoji "⚙️" %}</span>, <span class="accent">speed cubing {% emoji "⌛" %}</span>, <span class="accent">origami {% emoji "💮" %}</span>, and <span class="accent">reading books {% emoji "📚" %}</span>. 
-        </p>
+            I enjoy hacking on open source projects, speed cubing, origami, and reading.  </p>
 
         <p>
             I am currently the co-director of <a href="{{ gatech.hackgt.main }}" target="_blank">HackGT</a>. I'm also a teaching assistant for CS 3210 (Design of Operating Systems).
@@ -33,9 +32,13 @@ description: My personal website and blog!
         <p>
             In the past, I've interned at <a href="{{ work.ncr }}" target="_blank">NCR</a>. I was an event lead for <a href="{{ gatech.hackgt.horizons }}" target="_blank">Horizons</a>, an arts + tech hackathon that attracted over 300 hackers who made some really cool projects.
         </p>
+      
+        <p>
+          I'll be interning at Facebook this summer.
+        </p>
 
         <p>
-            You can find my projects on <a href="{{ work.github }}" target="_blank">github</a>. Some of my musings can be found on my <a href="/blog">blog</a>.
+            You can find my projects on <a href="{{ work.github }}" target="_blank">github</a>. I sometimes write on my <a href="/blog">blog</a>.
         </p>
     </section>
 
