--- a/resume/index.njk
+++ b/resume/index.njk
@@ -12,11 +12,13 @@ title: lexically::scoped | resume
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
     }
 
     .resume__container {
         display: flex;
         flex-direction: column;
+        flex-wrap: wrap;
     }
 
     .resume__container__item {
@@ -30,6 +32,7 @@ title: lexically::scoped | resume
     .resume__container__item__row--header {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
 
     .resume__container__item__row ul {
