--- a/index.njk
+++ b/index.njk
@@ -45,7 +45,7 @@ description: My personal website and blog!
     <section>
         <h2>{% emoji "📜" %} Recent posts </h2>
         <ul>
-            {%- for post in collections.post | reverse -%}
+            {%- for post in collections.posts | reverse -%}
                 <li>
                     <a href="{{ post.url }}">{{ post.data.title | safe }}</a> 
                     <small class="muted">{{ post.data.date | readableDate }}</small>
