Update front page

--- a/index.njk
+++ b/index.njk
@@ -3,7 +3,7 @@ layout: layouts/main.njk
 gatech:
   main: https://gatech.edu/
   hackgt:
-    main: https://www.hack.gt/
+    main: https://hexlabs.org
     horizons: https://www.horizons.hack.gt/
     horizonsProjects: https://horizons.hack.gt/
 work:
@@ -19,23 +19,26 @@ description: My personal website and blog!
 <div class="content">
     <section>
         <p>
-            I'm an undergrad studying Computer Science at <a href="{{ gatech.main }}" target="_blank">Georgia Tech</a>. My interests include operating systems, compilers, quantum computing, functional programming, and web development.
+            I'm an undergrad studying Computer Science at <a href="{{ gatech.main }}" target="_blank">Georgia Tech</a>. My interests include compilers, programming languages, quantum computing, and operating systems.
         </p>
 
-        <p>
-            I enjoy hacking on open source projects, speed cubing, origami, and reading.  </p>
+        <p> I enjoy hacking on open source projects, speed cubing, and reading. </p>
 
-        <p>
-            I am currently the co-director of <a href="{{ gatech.hackgt.main }}" target="_blank">HackGT</a>. I'm also a teaching assistant for CS 3210 (Design of Operating Systems).
+        <h3>Research</h3>
+        <p> I'm part of the <a href="http://prod.tinker.cc.gatech.edu/" target="_blank">TINKER lab</a> at Georgia Tech. My research revolves around Grover oracle implementations and synthesis. I'm advised by <a href="https://www.scs.gatech.edu/people/thomas-conte" target="_blank">Dr. Thomas Conte</a> and <a href="https://www.cc.gatech.edu/people/jeffrey-young" target="_blank">Dr. Jeff Young</a>.</p>
+        
+
+        <h3>Experience</h3>
+        I've interned on the PyTorch Dev Infra team at Facebook and the Innovation Lab at NCR. My <a href="/resume">resume</a> has more details.
+
+        <h3>Involvements</h3>
+
+
+        <p> I founded <a href="https://dtyped.netlify.app" target="_blank">dependently-typed</a>, a programming languages and compilers club at Georgia Tech. I am currently the co-director of <a href="{{ gatech.hackgt.main }}" target="_blank">Hexlabs</a> (formerly known as HackGT).
+            I was an event lead for <a href="{{ gatech.hackgt.horizons }}" target="_blank">Horizons</a>, an arts + tech hackathon that attracted over 300 hackers who made some really artsy projects.
         </p>
 
-        <p>
-            In the past, I've interned at <a href="{{ work.ncr }}" target="_blank">NCR</a>. I was an event lead for <a href="{{ gatech.hackgt.horizons }}" target="_blank">Horizons</a>, an arts + tech hackathon that attracted over 300 hackers who made some really cool projects.
-        </p>
-      
-        <p>
-          I'll be interning at Facebook this summer.
-        </p>
+      <p> I'm a teaching assistant for <a href="https://github.gatech.edu/pages/cs3210-fall2021/course/" target="_blank">CS 3210</a> (Design of Operating Systems).<p>
 
         <p>
             You can find my projects on <a href="{{ work.github }}" target="_blank">github</a>. I sometimes write on my <a href="/blog">blog</a>.
